crates/vize_canon/snapshots/vize_canon__virtual_ts__tests__virtual_ts_vfor_source_nested_in_vif_is_wrapped_for_narrowing.snap
---
source: crates/vize_canon/src/virtual_ts/tests.rs
expression: value
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// ImportMeta augmentation (reference existing framework types)
/// <reference types="vite/client" />
declare global {
  // Extend ImportMeta with Nuxt-specific properties not covered by vite/client
  interface ImportMeta {
    client: boolean;
    server: boolean;
    dev: boolean;
    prod: boolean;
    ssr: boolean;
  }
}

// ========== Module Scope (imports) ==========
type __EmitShape<T> = T extends (...args: any[]) => any ? T : T extends Record<string, any> ? { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; } : Record<string, any[]>;
type __EmitArgs<T, K extends keyof T> = T[K] extends any[] ? T[K] : any[];
type __EmitFn<T> = __EmitShape<T> extends (...args: any[]) => any ? __EmitShape<T> : (<K extends keyof __EmitShape<T>>(event: K, ...args: __EmitArgs<__EmitShape<T>, K>) => void);
type __RuntimePropCtor<T> = T extends readonly (infer U)[] ? __RuntimePropCtor<U> : T extends { type: infer U } ? __RuntimePropCtor<U> : T extends StringConstructor ? string : T extends NumberConstructor ? number : T extends BooleanConstructor ? boolean : T extends ArrayConstructor ? unknown[] : T extends ObjectConstructor ? Record<string, unknown> : T extends DateConstructor ? Date : T extends FunctionConstructor ? (...args: any[]) => any : unknown;
type __RuntimePropResolved<T> = T extends { required: true } ? true : T extends { default: any } ? true : false;
type __RuntimePropShape<T extends Record<string, any>> = { [K in keyof T]: __RuntimePropResolved<T[K]> extends true ? __RuntimePropCtor<T[K]> : __RuntimePropCtor<T[K]> | undefined; };
type __DefaultFactory<T> = (props: any) => T;
type __WithDefaultValue<T> = T | __DefaultFactory<T>;
type __WithDefaultsArgs<T> = { [K in keyof T]?: __WithDefaultValue<T[K]> };
type __WithDefaultsResult<T, D extends __WithDefaultsArgs<T>> = Omit<T, keyof D> & Required<Pick<T, keyof D & keyof T>>;
type __Ref<T> = import('vue').Ref<T>;
type __ShallowRef<T> = import('vue').ShallowRef<T>;
declare function __vForList<T>(source: readonly T[] | undefined | null): readonly [item: T, key: number, index: number][];
declare function __vForList(source: number | undefined | null): readonly [item: number, key: number, index: number][];
declare function __vForList(source: string | undefined | null): readonly [item: string, key: number, index: number][];
declare function __vForList<T>(source: Iterable<T> | undefined | null): readonly [item: T, key: number, index: number][];
declare function __vForList<T extends object>(source: T | undefined | null): readonly [item: T[keyof T], key: keyof T, index: number][];

// ========== Exported Types ==========
export type Props = {};

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (only valid in setup scope, not global)
  function defineProps<_T = unknown>(): _T;
  function defineProps<const _T extends readonly string[]>(_props: _T): { [K in _T[number]]?: any };
  function defineProps<const _T extends Record<string, any>>(_props: _T): __RuntimePropShape<_T>;
  function defineProps(_props?: any) { void _props; return undefined as any; }
  function defineEmits<_T = unknown>(): __EmitFn<_T>;
  function defineEmits<const _T extends readonly string[]>(_events: _T): (event: _T[number], ...args: any[]) => void;
  function defineEmits<const _T extends Record<string, any>>(_events: _T): __EmitFn<_T>;
  function defineEmits(_events?: any) { void _events; return (() => {}) as any; }
  function defineExpose<_T = unknown>(_exposed?: _T): void { void _exposed; }
  function defineModel<_T = unknown>(): __Ref<_T | undefined>;
  function defineModel<_T = unknown>(_options: any): __Ref<_T>;
  function defineModel<_T = unknown>(_name: string, _options?: any): __Ref<_T>;
  function defineModel(_name_or_options?: any, _options?: any) { void _name_or_options; void _options; return undefined as any; }
  function defineSlots<_T = unknown>(): _T { return undefined as unknown as _T; }
  function withDefaults<_T, _D extends __WithDefaultsArgs<_T>>(_props: _T, _defaults: _D): __WithDefaultsResult<_T, _D> { void _props; void _defaults; return undefined as unknown as __WithDefaultsResult<_T, _D>; }
  function useTemplateRef<_T = any>(_key: string): __ShallowRef<_T | null> { void _key; return undefined as unknown as __ShallowRef<_T | null>; }
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code
  const elems = { a: [1], b: ["a"] } as const;
  const key = "a" as "a" | "b";
  // @vize-map: 4766:4845 -> 0:74

  // ========== Template Scope (inherits from setup) ==========
  // Ref type captures (before template scope shadows them)
  type __R_elems = typeof elems;
  type __R_key = typeof key;
  ;(function __template() {
    // Auto-unwrap Vue refs in template scope
    type __U<T> = T extends import('vue').Ref<infer V, any> ? V : T;
    var elems: __U<__R_elems> = undefined as any;
    var key: __U<__R_key> = undefined as any;
    // Vue template context (delegates to ComponentPublicInstance)
    type __Ctx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __Ctx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;

  if ((key === 'b')) {
    // @vize-map: expr -> 11:22
  }
  if ((key === 'b')) {

    // v-for scope: value in elems[key]
    __vForList(elems[key]).forEach(([value]) => {
      void value;
      if ((key === 'b')) {
        void (value); // VBind
        // @vize-map: expr -> 69:74
      }
      if ((key === 'b')) {
        void (value); // Interpolation
        // @vize-map: expr -> 79:84
      }
    });
  }

  // Reference setup bindings (used in template/CSS v-bind)
  void elems; void key;
  })();
}

// Invoke setup to verify types
__setup();

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
type __VizeComponentInstance = {
  $props: Props;
  $emit: __EmitFn<Emits>;
  $slots: Slots;
};
type __VizeComponentConstructor = new (...args: any[]) => __VizeComponentInstance;
type __VizeVueComponentOptions = {
  name?: string;
  __name?: string;
  __file?: string;
  __vccOpts?: any;
  props?: any;
  emits?: any;
  slots?: any;
  setup?: any;
  render?: Function;
  components?: any;
  directives?: any;
  inheritAttrs?: boolean;
  compatConfig?: any;
  call?: (this: unknown, ...args: unknown[]) => never;
  __isFragment?: never;
  __isTeleport?: never;
  __isSuspense?: never;
  __defaults?: any;
  __vapor?: boolean;
  __multiRoot?: boolean;
  __isKeepAlive?: boolean;
  __isBuiltIn?: boolean;
};
declare const __vize_component__: __VizeComponentConstructor & __VizeVueComponentOptions;
export default __vize_component__;
